функционал для сущности Car + исправление замечаний v2